--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
         "minishell.h": "c",
-        "get_next_line.h": "c"
+        "get_next_line.h": "c",
+        "ft_printf.h": "c",
+        "libft.h": "c"
     }
 }
